--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-/* .App {
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+body{
+  background-color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+a , a:hover{
+  color:black;
+  text-decoration: none;;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1{
+  color:yellow;
 }
 
-.App-link {
-  color: #61dafb;
+.card:hover{
+  background-color: yellow;
+  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
