--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,84 @@ h1{
   color:yellow;
 }
 
-.card:hover{
-  /* background-color: yellow; */
-  
-}
+
 
 h4{
   font-size:18px;
+}
+
+
+.pagination {
+  margin: 15px auto;
+  display: flex;
+  list-style: none;
+  outline: none;
+}
+.pagination > .active > a{
+  background-color: yellow ;
+  border-color: yellow ;
+  color: #fff;
+}
+.pagination > li > a{
+  border: 1px solid yellow ;
+  padding: 5px 10px;
+  outline: none;
+  cursor: pointer;
+}
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
+  background-color: yellow ;
+  border-color: yellow;
+  outline: none ;
+}
+.pagination > li > a, .pagination > li > span{
+  color: yellow
+}
+.pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
+  border-radius: unset
+}
+
+
+
+/* //loader */
+
+.loading {
+  margin: 3em 0;
+}
+
+.loading-dots {
+  text-align: center;
+  font-size: 2em;
+  color: rgba(255,2555,255,0);
+  animation-name: loading-dots-animation;
+  animation-duration: 1.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes loading-dots-animation {
+  0% {
+    text-shadow: -1em 0 0 rgba(255,2555,255,.6), 0em 0 0 rgba(255,2555,255,.2), 1em 0 0 rgba(255,2555,255,.2);
+  }
+   20% {
+    text-shadow: -1em 0 0 rgba(255,2555,255,1), 0em 0 0 rgba(255,2555,255,.6), 1em 0 0 rgba(255,2555,255,.2);
+  }
+  40% {
+    text-shadow: -1em 0 0 rgba(255,2555,255,.6), 0em 0 0 rgba(255,2555,255,1), 1em 0 0 rgba(255,2555,255,0.6);
+  }
+  60% {
+    text-shadow: -1em 0 0 rgba(255,2555,255,.2), 0em 0 0 rgba(255,2555,255,.6), 1em 0 0 rgba(255,2555,255,1);
+  }
+  80% {
+    text-shadow: -1em 0 0 rgba(255,2555,255,.2), 0em 0 0 rgba(255,2555,255,.2), 1em 0 0 rgba(255,2555,255,.6);
+  }
+  100% {
+    text-shadow: -1em 0 0 rgba(255,2555,255,.6), 0em 0 0 rgba(255,2555,255,.2), 1em 0 0 rgba(255,2555,255,.2);
+  }
+}
+
+.loading-text {
+  font-weight: bold;
+  color: #fff;
+  margin: 0.3em 0;
+  font-size: 1.5em;
 }
